--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -1,83 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Pomodoro </title>
-    <!-- BootStrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Css -->
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Pomodoro </title>
+  <!-- BootStrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Css -->
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body >
+
+<body>
 
 
-    <div class="container">
+  <div class="container">
 
-        <div class="card position-absolute top-50 start-50 translate-middle bg-danger">
-            <div class="card-header text-center text-dark">
-              Pomodoro
-            </div>
-            <div class="card-body">
+    <div class="card position-absolute top-50 start-50 translate-middle bg-danger">
+      <div class="card-header text-center text-dark">
+        Pomodoro
+      </div>
+      <div class="card-body">
 
-                <!-- Tiempo faltante y cantidad de Ciclos -->
-                <div class="row text-white mb-4">
-                    <div class="col col-md-8 text-end">
-                        <h1 class="card-title"> 25:00 </h1>
-                    </div>
-                    <div class="col col-md-4 text-end ">
-                        <label for="numero" class="text-center"> Ciclo <br> Pomodoro </label> <br>   
-                        <input type="number" name="ciclo" id="ciclo" placeholder="ciclo" class="bg-danger form-control-sm" min="0" max="10">
-                    </div>
-                </div>
-
-
-                <!-- Boton para iniciar -->
-                <div class="row mb-4">
-                    <div class="col col-md-12 text-center ">
-                        <button class="btn btn-danger shadow btn-outline-dark btn-lg  ">Iniciar</button>
-                    </div>
-                </div>
-
-                <!-- Seleccionar: Cantidad de Tiempo de Trabajo, de Descanso y Descanso Largo -->
-                <div class="row text-white">
-                    <div class="col">
-                        <label for="tiempoTrabajado" class="text-center"> Tiempo <br> Trabajado </label> <br>   
-                        <input type="number" name="tiempoTrabajado" id="tiempoTrabajado" placeholder="tiempo del Trabajo" class="bg-danger form-control-sm" min="0" max="60">
-                    </div>
-
-                    <div class="col">
-                        <label for="tiempoDescanso" class="text-center"> Tiempo <br> Descanso </label> <br>   
-                        <input type="number" name="tiempoDescanso" id="tiempoDescanso" placeholder="tiempo del Descanso" class="bg-danger form-control-sm" min="0" max="60">
-                    </div>
-
-                    <div class="col">
-                        <label for="descansoLargo" class="text-center"> Descanso <br> Largo </label> <br>   
-                        <input type="number" name="descansoLargo" id="descansoLargo" placeholder="Descanso Largo" class="bg-danger form-control-sm" min="0" max="60">
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="card-footer text-body-secondary text-center">
-              <p>Consiste en tener tiempo de Trabajo y Descanso.</p>
-            </div>
+        <!-- Tiempo faltante y cantidad de Ciclos -->
+        <div class="row text-white mb-4">
+          <div class="col col-md-8 text-end">
+            <h1 class="card-title"> 25:00 </h1>
+          </div>
+          <div class="col col-md-4 text-end ">
+            <label for="numero" class="text-center"> Ciclo <br> Pomodoro </label> <br>
+            <input type="number" name="ciclo" id="ciclo" placeholder="ciclo" class="bg-danger form-control-sm" min="0"
+              max="10">
+          </div>
         </div>
+
+
+        <!-- Boton para iniciar -->
+        <div class="row mb-4">
+          <div class="col col-md-12 text-center ">
+            <button class="btn btn-danger shadow btn-outline-dark btn-lg  ">Iniciar</button>
+          </div>
+        </div>
+
+        <!-- Seleccionar: Cantidad de Tiempo de Trabajo, de Descanso y Descanso Largo -->
+        <div class="row text-white">
+          <div class="col">
+            <label for="tiempoTrabajado" class="text-center"> Tiempo <br> Trabajado </label> <br>
+            <input type="number" name="tiempoTrabajado" id="tiempoTrabajado" placeholder="tiempo del Trabajo"
+              class="bg-danger form-control-sm" min="0" max="60">
+          </div>
+
+          <div class="col">
+            <label for="tiempoDescanso" class="text-center"> Tiempo <br> Descanso </label> <br>
+            <input type="number" name="tiempoDescanso" id="tiempoDescanso" placeholder="tiempo del Descanso"
+              class="bg-danger form-control-sm" min="0" max="60">
+          </div>
+
+          <div class="col">
+            <label for="descansoLargo" class="text-center"> Descanso <br> Largo </label> <br>
+            <input type="number" name="descansoLargo" id="descansoLargo" placeholder="Descanso Largo"
+              class="bg-danger form-control-sm" min="0" max="60">
+          </div>
+        </div>
+
+      </div>
+
+      <div class="card-footer text-body-secondary text-center">
+        <p>Consiste en tener tiempo de Trabajo y Descanso.</p>
+      </div>
     </div>
+  </div>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </body>
+
 </html>
