--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -25,7 +25,7 @@
                 <!-- Tiempo faltante y cantidad de Ciclos -->
                 <div class="row text-white mb-4">
                     <div class="col col-md-8 text-end">
-                        <h1 class="card-title"> 25:00 </h1>
+                        <h1 class="card-title" id="temporizador"> 25:00 </h1>
                     </div>
                     <div class="col col-md-4 text-end ">
                         <label for="numero" class="text-center"> Ciclo <br> Pomodoro </label> <br>   
@@ -62,7 +62,7 @@
             </div>
 
             <div class="card-footer text-body-secondary text-center">
-              <p>Consiste en tener tiempo de Trabajo y Descanso.</p>
+              <p> Elige los tiempos de trabjo y descanso</p>
             </div>
         </div>
     </div>
@@ -70,6 +70,8 @@
 
 
 
+
+    <script src="pomodoro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js "
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
