--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -45,24 +45,24 @@
                 <div class="row text-white">
                     <div class="col">
                         <label for="tiempoTrabajado" class="text-center"> Tiempo <br> Trabajado </label> <br>   
-                        <input type="number" name="tiempoTrabajado" id="tiempo-Trabajado" placeholder="tiempo del Trabajo" class="bg-danger form-control-sm" min="0" max="60">
+                        <input type="number" name="tiempoTrabajado" id="tiempoTrabajado" placeholder="tiempo del Trabajo" class="bg-danger form-control-sm" min="0" max="60">
                     </div>
 
                     <div class="col">
                         <label for="tiempoDescanso" class="text-center"> Tiempo <br> Descanso </label> <br>   
-                        <input type="number" name="tiempoDescanso" id="tiempo-Descanso" placeholder="tiempo del Descanso" class="bg-danger form-control-sm" min="0" max="60">
+                        <input type="number" name="tiempoDescanso" id="tiempoDescanso" placeholder="tiempo del Descanso" class="bg-danger form-control-sm" min="0" max="60">
                     </div>
 
                     <div class="col">
                         <label for="descansoLargo" class="text-center"> Descanso <br> Largo </label> <br>   
-                        <input type="number" name="descansoLargo" id="descanso-Largo" placeholder="Descanso Largo" class="bg-danger form-control-sm" min="0" max="60">
+                        <input type="number" name="descansoLargo" id="descansoLargo" placeholder="Descanso Largo" class="bg-danger form-control-sm" min="0" max="60">
                     </div>
                 </div>
 
             </div>
 
             <div class="card-footer text-body-secondary text-center" id="cambiar-Texto">
-              <p> Elige los tiempos de trabjo y descanso</p>
+              <p> Elige los tiempos de trabajo y descanso</p>
             </div>
         </div>
     </div>
