--- a/Pomodoro/index.html
+++ b/Pomodoro/index.html
@@ -35,9 +35,15 @@
 
 
                 <!-- Boton para iniciar -->
-                <div class="row mb-4">
-                    <div class="col col-md-12 text-center" id="btn-Iniciar">
-                        <button class="btn shadow btn-outline-dark btn-lg colorDentro ">Iniciar</button>
+                <div class="row mb-4 botones">
+                    <div class="col col-md-4" id="btn-Pausar">
+                        <button class="btn shadow btn-outline-dark btn-lg colorDentro" disabled> <i class="bi bi-pause-circle-fill"> </i> </button>
+                    </div>
+                    <div class="col col-md-4" id="btn-Iniciar">
+                        <button class="btn shadow btn-outline-dark btn-lg colorDentro" disabled=false>Iniciar</button>
+                    </div>
+                    <div class="col col-md-4" id="btn-Reiniciar">
+                        <button class="btn shadow btn-outline-dark btn-lg colorDentro" disabled> <i class="bi bi-arrow-clockwise"> </i> </button>
                     </div>
                 </div>
 
